--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: black">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     Jay Matsushiba
@@ -56,7 +56,7 @@
         <div id="education-page">
             <!-- Timeline of educational history -->
             <div class="container">
-                <h2>Background</h2>
+                <h2>Education</h2>
             </div>
         </div>
 
@@ -64,7 +64,43 @@
         <div id="project-page">
             <!-- Use bootstrap carousel -->
             <div class="container">
-                <h2>Projects</h2>
+                <h2>Featured Projects</h2>
+                <div class="row">
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                
+
             </div>
         </div>
 
