adding content and links to other pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                   <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link" href="#">Home</a>
                     <a class="nav-item nav-link" href="#bio-page">About</a>
-                    <a class="nav-item nav-link" href="#education-page">Education</a>
                     <a class="nav-item nav-link" href="#project-page">Projects</a>
                     <a class="nav-item nav-link" href="#contact-page">Contact</a>
                   </div>
@@ -36,35 +35,34 @@
 
         <!-- Title Page -->
         <div id="title-page">
-            <div class="container">
-                <h1>JAY MATSUSHIBA</h1>
-                <h3>Exploring the natural world with curiosity and concern</h3>
+            <div id="title" class="container">
+                <div class="row position-fixed">
+                </div>
             </div>
         </div>
 
         <!-- Biography Page -->
         <div id="bio-page">
+            <!-- Short biography -->
             <div class="container">
-                <h2>About Me</h2>
+                <h2>ABOUT ME</h2>
                 <p>
                 Jay is a passionate advocate for the oceans, dedicating his work in education at the Vancouver Aquarium, Richmond Nature Park and Metro Vancouver. He has spoken on the topic of environmental education at TEDx events, the Vancouver School Board Sustainability Conference, and the Richmond Earth Day Youth Summit. He brings his passion to his own education, as he currently studies Ecology, Evolution and Conservation at Simon Fraser University. Jay can be found exploring the natural world every chance that he gets. Recently, Jay completed the East Beach trail hike on Haida Gwaii, covering 90 km by foot solo over the course of five days. As a strong proponent of storytelling, Jay believes that Promenades sur l’eau will tell the story about our oceans and our connections to the natural world through fashion. 
                 </p>
             </div>
-        </div>
 
-        <!-- Education Page -->
-        <div id="education-page">
             <!-- Timeline of educational history -->
             <div class="container">
-                <h2>Education</h2>
+                <h3>Education</h3>
             </div>
         </div>
 
+        <hr>
+
         <!-- Project Page -->
         <div id="project-page">
-            <!-- Use bootstrap carousel -->
             <div class="container">
-                <h2>Featured Projects</h2>
+                <h2>PROJECTS</h2>
                 <div class="row">
                     <div class="col">
                         <div class="card" style="width: 18rem;">
@@ -96,18 +94,59 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-                
-
+                <a href="projects.html">See more</a>
             </div>
         </div>
+
+        <hr>
+
+        <!-- Expedition Page -->
+        <div id="expedition-page">
+            <div class="container">
+                <h2>EXPEDITIONS</h2>
+                <div class="row">
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="card-link">Card link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="expeditions.html">See more</a>
+            </div>
+        </div>
+
+        <hr>
 
         <!-- Contact Information Page -->
         <div id="contact-page">
             <div class="container">
-                <h2>Contact Me</h2>
+                <h2>CONTACT ME</h2>
             </div>
 
         </div>
