--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
         <!-- reference to css file-->
         <link href="styles.css" rel="stylesheet" type="text/css">
 
+        <!-- font source-->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Overpass+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400&display=swap" rel="stylesheet">
+        <!-- source for fontawesome icons -->
+        <script src="https://kit.fontawesome.com/49e402ffef.js" crossorigin="anonymous"></script>
+
         <title>Jay Matsushiba</title>
     </head>
     <body>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: black">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     Jay Matsushiba
