--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    Jay Matsushiba
+                    <img src="images/jaymatsushiba-light.svg" alt='JAY MATSUSHIBA' height="25" width="auto">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="#">Home</a>
-                    <a class="nav-item nav-link" href="#bio-page">About</a>
-                    <a class="nav-item nav-link" href="#project-page">Projects</a>
-                    <a class="nav-item nav-link" href="#contact-page">Contact</a>
+                    <a class="nav-item nav-link " href="#bio-page">About</a>
+                    <a class="nav-item nav-link " href="#project-page">Projects</a>
+                    <a class="nav-item nav-link " href="#expedition-page">Expeditions</a>
+                    <a class="nav-item nav-link " href="#contact-page">Contact</a>
                   </div>
                 </div>
             </div>
@@ -41,14 +41,15 @@
 
         <!-- Title Page -->
         <div id="title-page">
+            <img id="title-image" src="images/hg2018-3237.jpg">
             <div id="title" class="container">
-                <div class="row position-fixed">
-                </div>
+                <img id="main-title" src="images/jaymatsushiba.svg" alt="JAY MATSUSHIBA">
+                <img id="sub-title" src="images/environmenteducationgis-light.svg" alt="ENVIRONMENT | EDUCATION | GIS">
             </div>
         </div>
 
         <!-- Biography Page -->
-        <div id="bio-page">
+        <div id="bio-page" class="section">
             <!-- Short biography -->
             <div class="container">
                 <h2>ABOUT ME</h2>
@@ -63,10 +64,8 @@
             </div>
         </div>
 
-        <hr>
-
         <!-- Project Page -->
-        <div id="project-page">
+        <div id="project-page" class='section'>
             <div class="container">
                 <h2>PROJECTS</h2>
                 <div class="row">
@@ -105,10 +104,8 @@
             </div>
         </div>
 
-        <hr>
-
         <!-- Expedition Page -->
-        <div id="expedition-page">
+        <div id="expedition-page" class='section'>
             <div class="container">
                 <h2>EXPEDITIONS</h2>
                 <div class="row">
@@ -143,23 +140,22 @@
                         </div>
                     </div>
                 </div>
+                
                 <a href="expeditions.html">See more</a>
             </div>
         </div>
 
-        <hr>
-
         <!-- Contact Information Page -->
-        <div id="contact-page">
+        <div id="contact-page" class='section'>
             <div class="container">
                 <h2>CONTACT ME</h2>
             </div>
-
         </div>
 
         <!-- JavaScript for Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src='script.js'></script>
     </body>
 </html>
