--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="bio-page" class="section">            
             <div class="container">
                 <div class="row">
-                    <img src="images/aboutme.svg" alt="about me">
+                    <img src="images/aboutme.svg" alt="about me" class="heading">
                 </div>
                 <div class="row">
                     <div class="col-6 mx-auto">
@@ -71,11 +71,30 @@
                         <ul class="timeline">
                             <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
                                 <div class="timeline-arrow"></div>
-                                <h2 class="h5 mb-0">Title of section 1</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>21 March, 2019</span>
-                                <p class="text-small mt-2 font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
+                                <h2 class="h5 mb-0">BSc - Biological Sciences </h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>In Progress</span>
+                                <p class="text-small mt-2 font-weight-light">Simon Fraser University</p>
                             </li>
-                            
+                            <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+                                <div class="timeline-arrow"></div>
+                                <h2 class="h5 mb-0">Certificate - Geographical Information Science </h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>Completed December 2019</span>
+                                <p class="text-small mt-2 font-weight-light">Simon Fraser University</p>
+                            </li>
+                            <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+                                <div class="timeline-arrow"></div>
+                                <h2 class="h5 mb-0">Diploma - International Baccalaureate </h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>Completed June 2016</span>
+                                <p class="text-small mt-2 font-weight-light">Sir Winston Churchill Secondary</p>
+                            </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h3>Where am I?</h3>
+                    </div> 
+                </div>
+                <div class="row">
+                    <div class="col">
+                        insert map of the world here, with vancouver blinking 
                     </div>
                 </div>
             </div>
@@ -85,7 +104,7 @@
         <div id="project-page" class='section'>
             <div class="container">
                 <div class=row>
-                    <img src="images/featuredprojects.svg" alt="Featured Projects">
+                    <img src="images/featuredprojects.svg" alt="Featured Projects" class="heading">
                 </div>
                 <div class="row">
                     <div class="col">
@@ -119,7 +138,11 @@
                         </div>
                     </div>
                 </div>
-                <a href="projects.html">See more</a>
+                <div class="row mt-3">
+                    <div class="col">
+                        <a href="projects.html" target="_blank"><h4>See more</h4></a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -127,7 +150,7 @@
         <div id="expedition-page" class='section'>
             <div class="container">
                 <div class="row">
-                    <img src="images/recentexpeditions.svg" alt="recent expeditions">
+                    <img src="images/recentexpeditions.svg" alt="recent expeditions" class="heading">
                 </div>
                 <div class="row">
                     <div class="col">
@@ -161,8 +184,11 @@
                         </div>
                     </div>
                 </div>
-                
-                <a href="expeditions.html">See more</a>
+                <div class="row mt-3">
+                    <div class="col">
+                        <a href="expeditions.html" target="_blank"><h4>See more</h4></a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -170,7 +196,7 @@
         <div id="contact-page" class='section'>
             <div class="container">
                 <div class="row">
-                    <img src="images/contactme.svg" alt="contact me">
+                    <img src="images/contactme.svg" alt="contact me" class="heading">
                 </div>
                 <div id="contactTileHolder" class='row d-flex justify-content-center'>
                     <!-- LinkedIn link -->
